# o-dns

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  blacklist_sample  denylist_sample  docker-compose.yaml  hosts_sample
crates/o-dns/: Cargo.toml
crates/o-dns-api/: Cargo.toml
crates/o-dns-api/src/: lib.rs  routes.rs  util.rs
crates/o-dns-api/src/handlers/: delete_list_entry.rs  get_list_entries.rs  get_query_logs.rs  get_stats.rs  mod.rs  modify_list_entry.rs
crates/o-dns-common/: Cargo.toml
crates/o-dns-common/src/: lib.rs  util.rs
crates/o-dns-db/: Cargo.toml
crates/o-dns-db/src/: lib.rs
crates/o-dns-db/src/models/: list_entry.rs  mod.rs  query_log.rs  stats.rs
crates/o-dns-lib/: Cargo.toml
crates/o-dns-lib/src/: buf.rs  dns_header.rs  lib.rs  question.rs  resource_record.rs  test_utils.rs  utils.rs
crates/o-dns/src/: app.rs  cache.rs  cli.rs  connection.rs  db.rs  hosts.rs  lib.rs  logging.rs  main.rs  query_log.rs  query_logger.rs  server.rs  upstream.rs  util.rs
crates/o-dns/src/access_lists/: denylist.rs  hosts.rs  mod.rs  util.rs
crates/o-dns/src/access_lists/parse/: mod.rs  parsers.rs  process_line.rs
crates/o-dns/src/api/: handlers.rs  mod.rs  routes.rs  util.rs
crates/o-dns/src/cache/: cached_query.rs  cached_record.rs  mod.rs
crates/o-dns/src/db/: mod.rs  model.rs
crates/o-dns/src/db/models/: list_entry.rs  mod.rs  query_log.rs
crates/o-dns/src/resolver/: mod.rs  upstream.rs
ui/: .env.sample  .prettierrc  Dockerfile  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts
ui/src/: App.tsx  vite-env.d.ts
ui/src/common/: useDebounced.ts  useDeleteDenylistEntry.ts  useListEntries.ts  useModifyDenylistEntry.ts  useModifyDomain.ts  useQueryLogs.ts  useStats.ts  useWindowDimensions.ts
ui/src/components/: ActivityChart.tsx  Button.tsx  Dashboard.tsx  DashboardCard.tsx  Denylist.tsx  EditEntryDialog.tsx  ErrorPage.tsx  FullScreenLoader.tsx  Hosts.tsx  NavBar.tsx  QueryChart.tsx  QueryLog.tsx  StatsDashboard.tsx
ui/src/components/DataTable/: DataTableActions.tsx  PaginationControls.tsx  PaginationSelector.tsx  TableBodyRow.tsx  TableHeaderRow.tsx  TableSettingsDropdown.tsx  TopControls.tsx  index.tsx  useTable.tsx  utils.ts
ui/src/components/ui/: card.tsx  chart.tsx  dropdown-menu.tsx  loader-spinner.tsx
ui/src/lib/: constants.ts  types.ts  utils.ts
