[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
o-dns-lib = { path = "crates/o-dns-lib", version = "0.1.0" }
o-dns-common = { path = "crates/o-dns-common", version = "0.1.0" }
o-dns-db = { path = "crates/o-dns-db", version = "0.1.0" }
o-dns-api = { path = "crates/o-dns-api", version = "0.1.0" }

[profile.test.package.proptest]
opt-level = 3
