[package]
name = "o-dns"
version = "0.1.0"
edition = "2021"

[dependencies]
o-dns-lib = { workspace = true }

anyhow = "1.0.89"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.40.0", features = [
    "net",
    "macros",
    "rt-multi-thread",
    "sync",
    "io-util",
    "fs",
    "time",
] }
sha1 = "0.10.6"
regex = "1.11.1"
bitflags = "2.6.0"
clap = { version = "4.5.20", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite", "derive"] }
axum = { version = "0.7.7", features = ["macros"] }
serde = { version = "1.0.214", features = ["derive"] }
